tests/ui/traits/const-traits/call-generic-in-impl.stderr
error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/call-generic-in-impl.rs:10:16
   |
LL | impl<T: ~const PartialEq> const MyPartialEq for T {
   |                ^^^^^^^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/call-generic-in-impl.rs:10:16
   |
LL | impl<T: ~const PartialEq> const MyPartialEq for T {
   |                ^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0015]: cannot call non-const fn `<T as PartialEq>::eq` in constant functions
  --> $DIR/call-generic-in-impl.rs:12:9
   |
LL |         PartialEq::eq(self, other)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
help: add `#![feature(effects)]` to the crate attributes to enable
   |
LL + #![feature(effects)]
   |

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0015`.
